--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 upstream edgeflow {
 	ip_hash;
-	server 0.0.0.0:12180;
+	server 127.0.0.1:12180;
 }
 
 server {
@@ -12,11 +12,11 @@ server {
     charset utf-8;
 
     location / {
-	    index index.html index.hml;
+	    index index.html;
     }
 
     #将所有HTTP请求通过rewrite指令重定向到HTTPS。
-    rewrite ^(.*)$ https://$host$1;
+    return 301 https://$host$request_uri;
 }
 server {
      #HTTPS的默认访问端口443。
@@ -58,7 +58,7 @@ server {
         proxy_buffering off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwa-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		if (!-f $request_filename) {
             proxy_pass http://edgeflow;
            	break;
