--- a/nginx.conf
+++ b/nginx.conf
@@ -6,14 +6,6 @@ upstream edgeflow {
 server {
     listen 80;
     server_name strategy.objc.com;
-
-    charset utf-8;
-
-    location / {
-        index index.html;
-    }
-
-    # 将所有HTTP请求通过rewrite指令重定向到HTTPS。
     return 301 https://$host$request_uri;
 }
 
@@ -21,16 +13,13 @@ server {
     listen 443 ssl;
     server_name strategy.objc.com;
 
-    charset utf-8;
-
-    ssl_certificate cert/strategy.objc.com.pem;
+    ssl_certificate     cert/strategy.objc.com.pem;
     ssl_certificate_key cert/strategy.objc.com.key;
 
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 5m;
-
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
-    ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
     client_header_buffer_size 16k;
@@ -38,19 +27,21 @@ server {
     access_log /var/log/nginx/edgeflow_access.log full_log;
     error_log /var/log/nginx/edgeflow_error.log;
 
+    # 静态页面/普通接口
     location / {
-        proxy_redirect off;
-        proxy_buffering off;
-
+        proxy_pass http://edgeflow;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
-        # WebSocket 关键头
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
+    # WebSocket 专用
+    location /api/v1/ticker/ws {
         proxy_pass http://edgeflow;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
     }
 
     error_page 500 502 503 504 /50x.html;
