--- a/nginx.conf
+++ b/nginx.conf
@@ -36,8 +36,8 @@ server {
     }
 
     # WebSocket 专用
-    location /api/v1/ticker/ws {
-        proxy_pass http://edgeflow;
+    location /api/v1/ws/ {
+        proxy_pass http://edgeflow/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
