--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ server {
 
     # WebSocket 专用
     location /api/v1/ws/ {
-        proxy_pass http://edgeflow/;
+        proxy_pass http://edgeflow;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
