--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       - strategy-net
     # 环境变量
     environment:
-      # KAFKA (使用宿主机稳定 IP)
-      KAFKA_HOST: 10.35.76.97
+      # KAFKA 腾讯云的 43.156.94.29
+      KAFKA_HOST: 43.156.94.29
       KAFKA_PORT: 9092
       # REDIS/MYSQL (使用宿主机 IP 或其他可访问地址)
       REDIS_HOST: 10.35.76.97
