从应用程序宿主机剥离mysql、kafka、redis，迁移至独立的腾讯云

--- a/pkg/kafka/tencet.server.properties
+++ b/pkg/kafka/tencet.server.properties
@@ -1,20 +1,24 @@
+# root@VM-12-10-ubuntu:/opt/kafka# vim config/kraft/server.properties
+
 process.roles=broker,controller
 node.id=1
 
 # 控制器投票者配置：node.id@controller地址
-controller.quorum.voters=1@172.17.0.1:9093
+# 腾讯云内网ip
+controller.quorum.voters=1@10.3.12.10:9093
 
-# 定义两个监听器：一个给 broker，一个给 controller
-listeners=PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
-advertised.listeners=PLAINTEXT://172.17.0.1:9092
+# 公网客户端/Broker 通信，L2: Controller 通信
+listeners=LISTENERS_PUBLIC://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+# 告知外部客户端连接这个公网IP
+advertised.listeners=LISTENERS_PUBLIC://43.156.94.29:9092
 
 # 指定 controller 使用哪个 listener 名称
 controller.listener.names=CONTROLLER
 
 # inter-broker 通信用哪个 listener
-inter.broker.listener.name=PLAINTEXT
+inter.broker.listener.name=LISTENERS_PUBLIC
 
-listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+listener.security.protocol.map=CONTROLLER:PLAINTEXT,LISTENERS_PUBLIC:PLAINTEXT
 
 num.network.threads=3
 num.io.threads=8
