--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       # REDIS/MYSQL (使用宿主机 IP 或其他可访问地址)
       REDIS_HOST: 172.17.0.1
       REDIS_PORT: 6379
-      REDIS_PASSWORD: Yang308719@#
+      #REDIS_PASSWORD: Yang308719@#
       # docker compose 使用腾讯云的公网ip
       DB_HOST: 172.17.0.1
       DB_PORT: 3306
